--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="half-width">
             <h1 class="about-me">About Me</h1>
             <p class="about-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores numquam quasi aliquid quisquam placeat libero distinctio doloribus, recusandae provident facilis debitis beatae, quibusdam iste repellat ad porro nisi repellendus dolores. Nesciunt optio earum quibusdam incidunt, modi fuga impedit! Quas, molestiae!</p>
-            <a class="button" href="https://www.facebook.com/profile.php?id=100076625174620">Contact Me</a>
+            <a class="button contact-me" href="https://www.facebook.com/profile.php?id=100076625174620">Contact Me</a>
         </div>
     </section>
     <section>
@@ -53,7 +53,29 @@
       </div>
       
     </section>
-    
+    <section>
+        <div class="follower">
+          <div>
+            <h1 class="amount">700K</h1>
+            <h3 class="media">Youtube Subscriber</h3>
+          </div>
+          <div>
+            <h1 class="amount">2.4M</h1>
+            <h3 class="media">Instagram Follower</h3>
+          </div>
+          <div>
+            <h1 class="amount">100K</h1>
+            <h3 class="media">Dribbble Shot Likes</h3>
+          </div>
+
+        </div>
+    </section>
+    <section class="foot-sec">
+        <footer class="footer">
+            <h2 class="footer-title"> <span class="orange-color-text">Eat</span> Fresh</h2>
+            <h3 class="footer-p">Eat healthy to live healthy. Live healthy to live happy.</h3>
+        </footer>
+    </section>
 
 </body>
 </html>
