--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         </div>
         <div class="half-width img-1">
-            <img class="img1" src="images/male/male1.png" alt="">
+            <img class="img1" src="images/male/first.png" alt="">
         </div>
     </section>
     <section class="about-sec flexible">
